# xero-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/xero-cli/: SKILL.md
.agents/skills/xero_user/: SKILL.md
src/xero_user_cli/: browser.py  cli.py  conf.py  exceptions.py  profile_locks.py  session.py  worker.py
src/xero_user_cli/actions/: accounting.py  areas.py  auth.py  debug.py  expenses.py  sales.py  screenshot.py  timesheets.py
tests/: test_area_extractors.py  test_area_mappings.py  test_cli_parser.py  test_conf.py  test_expense_parsing.py
