[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xero-user-cli"
version = "0.1.0"
description = "CLI for driving Xero through a real Camoufox browser session."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "darwincr" }]
keywords = ["xero", "camoufox", "playwright", "browser-automation", "cli"]
dependencies = [
    "camoufox>=0.4",
    "playwright<1.60",
]

[project.scripts]
xero-user = "xero_user_cli.cli:main"
xero-user-cli = "xero_user_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xero_user_cli"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
